SERVER-33024: Set last applied when coming out of initial sync.

An initial sync can complete when without needing to go through an oplog
application phase. In that case, last applied is not set.